styles/stylesheet.css
/* ... */
.burger_menu:hover {
    opacity: 80%;
}

.burger_menu-top {
    top: 0;
    width: 24px;
    height: 4px;
    background-color: #000;
    margin: 5px 0;
    transform: translateZ(0);
    transition: transform .6s cubic-bezier(.165, .84, .44, 1);
}

.burger_menu.active .burger_menu-top {
    transform: translateY(0px) translateX(0px) rotate(45deg);
}

.burger_menu-bottom {
    bottom: 0;
    width: 20px;
    height: 4px;
    background-color: #000;
    margin: 5px 0;
    transform: translateZ(0);
    transition: transform .6s cubic-bezier(.165, .84, .44, 1);
}

.burger_menu.active .burger_menu-bottom {
    width: 24px;
    transform: translateY(-9px) translateX(0px) rotate(-45deg);
}

.darkmode {
    background-color: #fff !important;
}

@media (min-width: 700px) {

    .burger_menu {
        display: none;
    }

}

.overlay {
    position: fixed;
    background: #F84B27;
    top: 0;
    left: 0;
    width: 100%;
    height: 0%;
    opacity: 0;
    visibility: hidden;
    transition: opacity .35s, visibility .35s, height .35s;
    overflow: hidden;
}

.overlay.open {
    opacity: 1;
    visibility: visible;
    height: 100%;
}

.overlay.open li {
    animation: slideTextUp .5s ease forwards;
    animation-delay: .35s;
}

.overlay.open li:nth-of-type(2) {
    animation-delay: .4s;
}

.overlay.open li:nth-of-type(3) {
    animation-delay: .45s;
}

.overlay-menu {
    position: fixed;
    /* transform: translateY(-50%); */
    text-align: left;
    top: 60vh;
    left: 5vw;
}

.overlay ul {
    list-style: none;
    padding: 0;
    margin: 0 auto;
    display: inline-block;
    position: absolute;
    line-height: 110%;
}

.overlay ul li {
    display: block;
    min-height: 50px;
    opacity: 0;
}

.overlay ul li a {
    display: block;
    position: relative;
    color: #000;
    text-decoration: none;
    font-size: 9rem;
    line-height: 100%;
    font-weight: bold;
}

@keyframes slideTextUp {
    0% {
        opacity: 0;
        transform: translateY(0);
    }

    100% {
        opacity: 1;
        transform: translateY(100%);
    }
}


/* INTRO HERO */

.hero {
    height: 100%;
    min-height: 580px;
    align-items: center;
    color: #000000;

}

.hero-wrapper {
    align-items: flex-end;
    display: flex;
    height: 100vh;
    min-height: 300px;
    justify-content: space-between;
    padding-bottom: 1rem;
}

.hero-stickers {
    position: absolute;          /* Allows positioning within the hero-section */
    right: -200px;                 /* Adjust right position */
    width: 90vw;                /* Set the desired image width */
    height: auto;                /* Maintain aspect ratio */
    z-index: 1;                  /* Ensure it appears on top of other content */
}

.sticker-wrapper {
    position: absolute;
    width: 100vw;
    height: 100vh;
}

.hero-circle {
    position: absolute;
    width: 30vw;
    height: auto;
    z-index: 1;
    top: 15vh;
    right: 35%;
    z-index: 3;
    animation: rotate 30s infinite linear;
}

.hero-circle:hover {
    transform: scale(1.1);
}

.hero-triangle {
    position: absolute;
    width: 30vw;
    height: auto;
    top: 27vh;
    right: 15%;
    z-index: 2;
    transform:rotate(-8deg);
    transition: transform .7s cubic-bezier(0.2, 0.0, 0, 1.0);
}

.hero-triangle:hover {
    transform:rotate(-20deg)  scale(1.1);
}

.hero-initial {
    position: absolute;
    width: 40vw;
    height: auto;
    z-index: 1;
    top: 17vh;
    right: -12%;
    transform: rotate(13deg);
    transition: transform .7s cubic-bezier(0.2, 0.0, 0, 1.0);
}

.hero-initial:hover {
    transform: rotate(20deg) scale(1.1);
}

.hero-headline {
    height: auto;
    width: 100%;
    white-space: nowrap;
    overflow-wrap: break-word;
    text-align: justify;
}

.hero-name {
    /* font-size: 12rem; */
    font-size: 12.5vw;
    line-height: 1.05;
    text-transform: capitalize;
    font-family: "Inter", sans-serif;
    font-optical-sizing: auto;
    font-weight: bold;
    font-style: normal;
}

.hero-accent {
    display: inline-block; 
    animation: rotate 20s infinite linear;
}

@keyframes rotate {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
}

.hero-text {
    font-family: "IBM Plex Mono", Helvetica, sans-serif;
    overflow: hidden;
    white-space: nowrap;
    transition: transform .5s cubic-bezier(0, 1.07, .89, .99);
    transition: all .4s ease;
    font-size: 8rem;
    line-height: 10rem;
}

.hero-avatar {
    width: 25vw;
    position: absolute;
}

.hero-arrow {
    align-items: flex-end;
}

.hero-arrow-svg {
    height: 8rem;
    fill: black;
    transform-origin: bottom;
    transition: transform 0.2s ease;
}

.hero-arrow-svg:hover{
    transform: scaleY(1.1);
}

/* Smartphones (portrait and landscape) ----------- */
@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
    .hero-arrow {
        display: none;
    }

    .hero-wrapper {
        /* align-items: center; */
    }

    .hero-text {
        font-size: 5rem;
        line-height: 6rem
    }

    .hero-circle {
        width: 80vw;
        top: 5vh;
        right: -12%;

    }

    .hero-triangle {
        width: 80vw;
        top: 28vh;
        right: 25%;
    }

    .hero-initial {
        width: 90vw;
        top: 60vh;
        right: -5%s
    }
}


 /* LARGE SCREENS ONLY */
@media only screen and (min-device-width : 1440px) {
    .hero-name {
        font-size: 10vw;
    }
}


/* ABOUT ME */

.about {
    display: flex;
    justify-content: flex-start;
    flex-direction: row;
    padding-top: 20.15vw;
    padding-bottom: 15.055vw;
    color: white;
}

.about .intro {
    -webkit-flex: 2 1 60%;
    -moz-box-flex: 2;
    flex: 2 1 60%;
}

.about .links {
    flex: 1 1 40%;
    text-align: right;
    margin-left: auto;
    text-decoration: none;
}

.about .links-list {
    list-style: none;
    font-size: 2rem;
}

.about .links-list ul {
    margin-top: 10px;
    line-height: 2rem;
}
/* ... */

